@@ -20,15 +20,18 @@ package org.netbeans.modules.parsing.lucene;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
-import org.apache.lucene.analysis.KeywordAnalyzer;
+import org.apache.lucene.analysis.core.KeywordAnalyzer;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
+import org.apache.lucene.document.FieldType;
+import org.apache.lucene.index.IndexOptions;
+import org.apache.lucene.index.IndexableFieldType;
 import org.apache.lucene.index.Term;
 import org.apache.lucene.search.PrefixQuery;
 import org.apache.lucene.search.Query;
@@ -46,6 +49,14 @@ import org.openide.util.Parameters;
  * @author Tomas Zezula
  */
 public class AsyncCloseTest extends NbTestCase {
+    private static final IndexableFieldType STORED_ANALYZED;
+    static {
+        STORED_ANALYZED = new FieldType();
+        ((FieldType) STORED_ANALYZED).setStored(true);
+        ((FieldType) STORED_ANALYZED).setTokenized(true);
+        ((FieldType) STORED_ANALYZED).setIndexOptions(IndexOptions.DOCS);
+        ((FieldType) STORED_ANALYZED).freeze();
+    }
 
     private static final String FLD_KEY = "key";    //NOI18N
 
@@ -69,25 +80,22 @@ public class AsyncCloseTest extends NbTestCase {
     public void testAsyncClose() throws Exception {
         final CountDownLatch slot = new CountDownLatch(1);
         final CountDownLatch signal = new CountDownLatch(1);
-        final  CountDownLatch done = new CountDownLatch(1);
-        final AtomicReference<Exception> exception = new AtomicReference<Exception>();
+        final CountDownLatch done = new CountDownLatch(1);
+        final AtomicReference<Exception> exception = new AtomicReference<>();
 
         final Index index = IndexManager.createTransactionalIndex(indexFolder, new KeywordAnalyzer());
-        final Thread worker = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                try {
-                    index.store(
-                       new ArrayList<String>(Arrays.asList("foo")), //NOI18N
-                       Collections.<String>emptySet(),
-                       new TestInsertConvertor(slot, signal),
-                       new TestDeleteConvertor(),
-                       true);
-                } catch (Exception ex) {
-                    exception.set(ex);
-                } finally {
-                    done.countDown();
-                }
+        final Thread worker = new Thread(() -> {
+            try {
+                index.store(
+                        new ArrayList<>(List.of("foo")), //NOI18N
+                        Collections.emptySet(),
+                        new TestInsertConvertor(slot, signal),
+                        new TestDeleteConvertor(),
+                        true);
+            } catch (Exception ex) {
+                exception.set(ex);
+            } finally {
+                done.countDown();
             }
         });
         worker.start();
@@ -102,8 +110,8 @@ public class AsyncCloseTest extends NbTestCase {
     public void testConcurrentReadWrite() throws Exception {
         final Index index = IndexManager.createTransactionalIndex(indexFolder, new KeywordAnalyzer());
         index.store(
-            new ArrayList<String>(Arrays.asList("a")), //NOI18N
-            Collections.<String>emptySet(),
+            new ArrayList<>(List.of("a")), //NOI18N
+            Collections.emptySet(),
             new TestInsertConvertor(),
             new TestDeleteConvertor(),
             true);
@@ -111,30 +119,27 @@ public class AsyncCloseTest extends NbTestCase {
         final CountDownLatch slot = new CountDownLatch(1);
         final CountDownLatch signal = new CountDownLatch(1);
         final CountDownLatch done = new CountDownLatch(1);
-        final AtomicReference<Exception> result = new AtomicReference<Exception>();
+        final AtomicReference<Exception> result = new AtomicReference<>();
 
-        final Thread worker = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                try {
-                    index.store(
-                           new ArrayList<String>(Arrays.asList("b")), //NOI18N
-                           Collections.<String>emptySet(),
-                           new TestInsertConvertor(slot, signal),
-                           new TestDeleteConvertor(),
-                           true);
-                } catch (Exception e) {
-                    result.set(e);
-                } finally {
-                    done.countDown();
-                }
+        final Thread worker = new Thread(() -> {
+            try {
+                index.store(
+                        new ArrayList<>(List.of("b")), //NOI18N
+                        Collections.emptySet(),
+                        new TestInsertConvertor(slot, signal),
+                        new TestDeleteConvertor(),
+                        true);
+            } catch (Exception e) {
+                result.set(e);
+            } finally {
+                done.countDown();
             }
         });
 
         worker.start();
         signal.await();
 
-        final Collection<String> data = new ArrayList<String>();
+        final Collection<String> data = new ArrayList<>();
         index.query(
             data,
             new Convertor<Document,String>(){
@@ -187,7 +192,7 @@ public class AsyncCloseTest extends NbTestCase {
             }
 
             final Document doc = new Document();
-            doc.add(new Field(FLD_KEY, p, Field.Store.YES, Field.Index.ANALYZED_NO_NORMS));   //NOI18N
+            doc.add(new Field(FLD_KEY, p, STORED_ANALYZED));
             return doc;
         }
     }
