@@ -22,9 +22,8 @@ import com.sun.source.tree.CaseTree;
 import com.sun.source.tree.SwitchTree;
 import com.sun.source.tree.Tree;
 import com.sun.source.util.TreePath;
-import javax.lang.model.SourceVersion;
-import org.netbeans.api.java.queries.CompilerOptionsQuery;
 import org.netbeans.api.java.source.CompilationInfo;
+import org.netbeans.modules.java.hints.Feature;
 import org.netbeans.modules.java.hints.errors.Utilities;
 import org.netbeans.spi.editor.hints.ErrorDescription;
 import org.netbeans.spi.java.hints.ErrorDescriptionFactory;
@@ -45,13 +44,12 @@ import org.openide.util.NbBundle.Messages;
 })
 public class ConvertSwitchToRuleSwitch {
 
-    private static final int SWITCH_RULE_PREVIEW_JDK_VERSION = 13;
-
     @TriggerTreeKind(Tree.Kind.SWITCH)
     @Messages({"ERR_ConvertSwitchToRuleSwitch=Convert switch to rule switch", "ERR_ConvertSwitchToSwitchExpression=Convert to switch expression"})
     public static ErrorDescription switch2RuleSwitch(HintContext ctx) {
-        if (Utilities.isJDKVersionLower(SWITCH_RULE_PREVIEW_JDK_VERSION) && !CompilerOptionsQuery.getOptions(ctx.getInfo().getFileObject()).getArguments().contains("--enable-preview"))
+        if (!Feature.SWITCH_EXPRESSIONS.isEnabled(ctx.getInfo())) {
             return null;
+        }
         SwitchTree st = (SwitchTree) ctx.getPath().getLeaf();
         boolean completesNormally = false;
         boolean wasDefault = false;
