@@ -26,7 +26,6 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -38,6 +37,7 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -71,7 +71,9 @@ import org.netbeans.modules.maven.indexer.api.RepositoryPreferences;
 import org.netbeans.modules.maven.options.MavenSettings;
 import org.netbeans.modules.maven.runjar.MavenExecuteUtils;
 import org.netbeans.spi.project.ui.support.BuildExecutionSupport;
+import org.openide.DialogDisplayer;
 import org.openide.LifecycleManager;
+import org.openide.NotifyDescriptor;
 import org.openide.awt.HtmlBrowser;
 import org.openide.awt.NotificationDisplayer;
 import org.openide.execution.ExecutionEngine;
@@ -108,8 +110,8 @@ import org.openide.windows.OutputListener;
  * Example use:
  * {@snippet file="org/netbeans/modules/maven/execute/MavenExecutionTestBase.java" region="samplePassAdditionalVMargs"}
  * The example will <b>append</b> <code>-DvmArg2=2</code> to VM arguments and <b>replaces</b> all user
- * program arguments with <code>"paramY"</code>. Append mode can be controlled using {@link ExplicitProcessParameters.Builder#appendArgs} or
- * {@link ExplicitProcessParameters.Builder#appendPriorityArgs}.
+ * program arguments with <code>"paramY"</code>. Append mode can be controlled using {@link ExplicitProcessParameters.Builder#replaceArgs(boolean) } or
+ * {@link ExplicitProcessParameters.Builder#replaceLauncherArgs(boolean) }.
  *
  * @author  Milos Kleint (mkleint@codehaus.org)
  * @author  Svata Dedic (svatopluk.dedic@gmail.com)
@@ -127,6 +129,12 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
     private String processUUID;
     private Process preProcess;
     private String preProcessUUID;
+
+    /**
+     * Diagnostics: stracktrace that shows what code requested the execution.
+     */
+    private final Throwable trace;
+    
     private static final SpecificationVersion VER18 = new SpecificationVersion("1.8"); //NOI18N
     private static final Logger LOGGER = Logger.getLogger(MavenCommandLineExecutor.class.getName());
 
@@ -190,16 +198,21 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
     public MavenCommandLineExecutor(RunConfig conf, InputOutput io, TabContext tc) {
         super(conf, tc);
         this.io = io;
+        if (LOGGER.isLoggable(Level.FINER)) {
+            this.trace = new Throwable();
+        } else {
+            this.trace = null;
+        }
     }
 
+    /**
+     * not to be called directly.. use execute();
+     */
     @NbBundle.Messages({
         "# {0} - original message",
         "ERR_CannotOverrideProxy=Could not override the proxy: {0}",
         "ERR_BuildCancelled=Build cancelled by the user"
     })
-    /**
-     * not to be called directly.. use execute();
-     */
     @Override
     public void run() {
         synchronized (SEMAPHORE) {
@@ -300,17 +313,16 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
 //        final Properties originalProperties = clonedConfig.getProperties();
         handle.start();
         processInitialMessage();
-        boolean isMaven3 = !isMaven2();
         boolean singlethreaded = !isMultiThreaded(clonedConfig);
         boolean eventSpyCompatible = isEventSpyCompatible(clonedConfig);
-        if (isMaven3 && singlethreaded && eventSpyCompatible) {
+        if (singlethreaded && eventSpyCompatible) {
             injectEventSpy( clonedConfig );
             if (clonedConfig.getPreExecution() != null) {
                 injectEventSpy( (BeanRunConfig) clonedConfig.getPreExecution());
             }
         }
 
-        CommandLineOutputHandler out = new CommandLineOutputHandler(ioput, clonedConfig.getProject(), handle, clonedConfig, isMaven3 && singlethreaded);
+        CommandLineOutputHandler out = new CommandLineOutputHandler(ioput, clonedConfig.getProject(), handle, clonedConfig, singlethreaded);
         try {
             BuildExecutionSupport.registerRunningItem(item);
             if (MavenSettings.getDefault().isAlwaysShowOutput()) {
@@ -331,6 +343,8 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
 //                ioput.getOut().println(key + ":" + env.get(key));
 //            }
             ProcessBuilder builder = constructBuilder(clonedConfig, ioput);
+            LOGGER.log(Level.FINER, "Executing process {0} from {1}", new Object[] { builder.command(), this });
+            LOGGER.log(Level.FINER, "Origin:", this.trace);
             printCoSWarning(clonedConfig, ioput);
             processUUID = UUID.randomUUID().toString();
             builder.environment().put(KEY_UUID, processUUID);
@@ -348,6 +362,7 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
             throw death;
         } finally {
             BuildExecutionSupport.registerFinishedItem(item);
+            LOGGER.log(Level.FINER, "Execution of {0} terminated", this );
 
             try { //defend against badly written extensions..
                 out.buildFinished();
@@ -428,6 +443,9 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
         return true;
     }
 
+     @NbBundle.Messages({
+        "MSG_MissingValue=Option: {0} requires value to be present"
+    })
     private static List<String> createMavenExecutionCommand(RunConfig config, Constructor base) {
         List<String> toRet = new ArrayList<>(base.construct());
 
@@ -445,10 +463,29 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
                 LOGGER.log(Level.FINE, "Could not canonicalize " + basedir, x);
             }
         }
-
+    
         //#164234
         //if maven.bat file is in space containing path, we need to quote with simple quotes.
         String quote = "\"";
+        
+        for (Map.Entry<? extends String, ? extends String> entry : config.getOptions().entrySet()) {
+            String key = entry.getKey();
+            String value = quote2apos(entry.getValue());
+            if (MavenCommandLineOptions.optionRequiresValue(key)) {
+                if (value.isEmpty()) {
+                    DialogDisplayer.getDefault().notifyLater(new NotifyDescriptor.Message(Bundle.MSG_MissingValue(key), NotifyDescriptor.WARNING_MESSAGE));
+                    continue;
+                } else if (value.equals("${" + key + "}")) { //NOI18N
+                    continue;
+                }
+            }
+            toRet.add("--" + key);
+            if (value != null && !value.isBlank()) {
+                String s = (Utilities.isWindows() && value.contains(" ") ? quote + value + quote : value); 
+                toRet.add(value);
+            }
+        }
+
         // the command line parameters with space in them need to be quoted and escaped to arrive
         // correctly to the java runtime on windows
         for (Map.Entry<? extends String, ? extends String> entry : config.getProperties().entrySet()) {
@@ -549,15 +586,12 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
         for (Object profile : config.getActivatedProfiles()) {
             profiles = profiles + "," + profile;//NOI18N
         }
-        if (profiles.length() > 0) {
+        if (!profiles.isEmpty()) {
             profiles = profiles.substring(1);
             toRet.add("-P" + profiles);//NOI18N
         }
 
-        for (String goal : config.getGoals()) {
-            toRet.add(goal);
-        }
-
+        toRet.addAll(config.getGoals());
         return toRet;
     }
    
@@ -750,7 +784,7 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
             //very hacky here.. have a way to remove
             List<String> command = new ArrayList<>(builder.command());
             command.removeIf(s -> s.startsWith("-D" + CosChecker.MAVENEXTCLASSPATH + "="));
-            display.append(Utilities.escapeParameters(command.toArray(new String[0])));
+            display.append(Utilities.escapeParameters(command.toArray(String[]::new)));
         }
 
         printGray(ioput, display.toString());
@@ -783,10 +817,6 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
             try {
                 ioput.getErr().println("  See issue http://www.netbeans.org/issues/show_bug.cgi?id=153101 for details.", new OutputListener() {                    //NOI18N - in maven output
                     @Override
-                    public void outputLineSelected(OutputEvent ev) {}
-                    @Override
-                    public void outputLineCleared(OutputEvent ev) {}
-                    @Override
                     public void outputLineAction(OutputEvent ev) {
                         try {
                             HtmlBrowser.URLDisplayer.getDefault().showURL(new URL("http://www.netbeans.org/issues/show_bug.cgi?id=153101")); //NOI18N - in maven output
@@ -812,10 +842,6 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
     private void printCoSWarning(BeanRunConfig clonedConfig, InputOutput ioput) {
         if (clonedConfig.getProperties().containsKey(CosChecker.ENV_NETBEANS_PROJECT_MAPPINGS)) {
             printGray(ioput, "Running NetBeans Compile On Save execution. Phase execution is skipped and output directories of dependency projects (with Compile on Save turned on) will be used instead of their jar artifacts.");
-            if (isMaven2()) {
-                printGray(ioput, "WARNING: Using Maven 2.x for execution, NetBeans cannot establish links between current project and output directories of dependency projects with Compile on Save turned on. Only works with Maven 3.0+.");
-            }
-
         }
         if (clonedConfig.getProperties().containsKey(ModelRunConfig.EXEC_MERGED)) {
             printGray(ioput, "\nDefault '" + clonedConfig.getActionName() + "' action exec.args merged with maven-exec-plugin arguments declared in pom.xml.");
@@ -823,15 +849,9 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
 
     }
 
-    boolean isMaven2() {
-        File mvnHome = EmbedderFactory.getEffectiveMavenHome();
-        String version = MavenSettings.getCommandLineMavenVersion(mvnHome);
-        return version != null && version.startsWith("2");
-    }
-
     private boolean isMavenDaemon() {
         File mvnHome = EmbedderFactory.getEffectiveMavenHome();
-        return MavenSettings.isMavenDaemon(Paths.get(mvnHome.getPath()));
+        return MavenSettings.isMavenDaemon(Path.of(mvnHome.getPath()));
     }
 
     private void injectEventSpy(final BeanRunConfig clonedConfig) {
@@ -926,7 +946,7 @@ public class MavenCommandLineExecutor extends AbstractMavenExecutor {
             if (!relative.toString().contains(" ")) { // NOI18N
                 if (relative.getNameCount() == 1) {
                     // prevent searching on PATH
-                    return Paths.get(".").resolve(relative).toFile();  // NOI18N
+                    return Path.of(".").resolve(relative).toFile();  // NOI18N
                 } else {
                     return relative.toFile();
                 }
